fix summary section mobile version

--- a/style.css
+++ b/style.css
@@ -244,6 +244,7 @@ border-radius: 12px;
     height: 100vh;
     border-radius: none;
     position: static;
+    justify-content: space-between;
   }
 
   .summary h1 {
